--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,16 +1,19 @@
 .card {
     border-radius: 5px;
-    height: 205px;
+    height: 200px;
     margin: 1rem;
-    position: relative;
     width: 150px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    transition: .5s linear; 
   }
 
-.card :hover{
+.card:hover{
   transition: all .4s ease-in-out; 
   transform: scale(1.1);
+  -ms-transform: scale(1.1); /* IE 9 */
+  -webkit-transform: scale(1.1); /* Safari 3-8 */
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+
 }
 
 .card:active {
@@ -18,8 +21,9 @@
 }
 
   img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 200px;
     padding: 2px;
-    border-radius:5px; 
+    border-radius:5px;
+    object-fit: fill;
   }
